HelloUltraviolet/Fixtures/RejectedSource/Procedures/ContractEntryMovedParameter/Expected.uv
//! Expected diagnostic metadata for the ContractEntryMovedParameter rejected-source specimen.

expectedDiagnostic("E-SEM-2807", "diag.15.ProcedureContractEntryDiagnosticsOwnership")
